# ant-game

./: CMakeLists.txt  README.md
assets/: README.md
include/: app.h  object.h  platform.h  render.h  teapot.h
shaders/: ant.comp  object.frag  object.vert
src/: app.c  main.c  navmesh_cli.c  object.c  platform.c  platform_internal.h  render.c  teapot.c
tests/: ant_animation_test.c  object_test.c
